# Koperasi

./: README.md
ai_services/: .gitignore  Dockerfile  README.md  app.py  koperasi.ipynb  main.py  pyproject.toml  requirements.txt
ai_services/base_knowladge/: coa.json
ai_services/config/: settings.py
ai_services/utils/: enhance_utils.py  image_utils.py  llm_utils.py  ocr_utils.py
koperasi_web/: .env.example  .gitignore  README.md  package-lock.json
koperasi_web/app/Http/Controllers/: AccountCodeController.php  AuthController.php  FinanceReportController.php  FinancialPositionReportController.php  LedgerController.php  PostingController.php  SHUReportController.php  TrialBalanceController.php
koperasi_web/app/Models/: ChartOfAccount.php  LedgerEntry.php  TransactionItem.php
koperasi_web/database/migrations/: 2025_11_05_220153_create_ledger_entries_table.php  2025_11_05_220201_create_transaction_items_table.php  2025_11_07_063551_add_transaction_code_to_ledger_entries_table.php  2025_12_02_092733_create_chart_of_accounts_table.php  2025_12_03_090045_add_foreign_key_to_ledger_entries.php
koperasi_web/database/seeders/: ChartOfAccountSeeder.php  ShuDummySeeder.php
koperasi_web/resources/views/auth/: login.blade.php
koperasi_web/resources/views/components/: sidebar.blade.php
koperasi_web/resources/views/dashboard/: account-code-recommender.blade.php  finance-report.blade.php  financial-position-report.blade.php  ledger.blade.php  posting.blade.php  shu-report.blade.php  trial-balance.blade.php
koperasi_web/routes/: web.php
(+3 files in other folders)
